# Transcendence-M33

./: Flags_Mapping.md  Instruction_Mapping.md  Instruction_Mapping_Pairs.md  README.md
Archive/pico/degallo/: degallo.cpp
Archive/pico/pico_bdos_gdos/degallo/: CLEAN_BUILD_FILES.sh  CMakeLists.txt  DeGallo_BUILD_ALL.sh  DeGallo_Example.md
Archive/pico/pico_bdos_gdos/degallo/common/: pimoroni_display_two_st7789.cpp  pimoroni_display_two_st7789.h
Archive/pico/pico_bdos_gdos/degallo/degallo_app/: APP_to_BIN.sh  CMakeLists.txt  app.cpp
Archive/pico/pico_bdos_gdos/degallo/degallo_hw/: CMakeLists.txt  hw.cpp
Archive/pico/pico_bdos_gdos/degallo/degallo_os/: CMakeLists.txt  degallo_bdos.cpp  degallo_bdos.h  degallo_bios.cpp  degallo_bios.h  degallo_main.cpp
